test/libsolidity/syntaxTests/nameAndTypeResolution/137_external_visibility.sol
contract c {
    function f() external {}
    function g() public { f(); }
}
// ----
// DeclarationError 7576: (68-69): Undeclared identifier. "f" is not (or not yet) visible at this point.
